--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": "true",
   "description": "The goal of this repo is to codify our engineering culture and keep clear our workflow options.",
   "main": "index.js",
+  "scripts": {
+    "build": "NODE_ENV='production' ./node_modules/.bin/webpack -p",
+    "dev": "./node_modules/.bin/webpack --watch --progress"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/socialtables/socialtables.github.io.git"
@@ -12,5 +16,18 @@
   "bugs": {
     "url": "https://github.com/socialtables/socialtables.github.io/issues"
   },
-  "homepage": "https://github.com/socialtables/socialtables.github.io"
+  "homepage": "https://github.com/socialtables/socialtables.github.io",
+  "dependencies": {
+    "material-ui": "^0.14.0-rc1",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-tap-event-plugin": "^0.2.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.3.15",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "webpack": "^1.12.9"
+  }
 }
