--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "homepage": "https://github.com/socialtables/socialtables.github.io",
   "dependencies": {
-    "material-ui": "^0.14.0-rc1",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
+    "material-ui": "^0.14.0",
+    "react": "^0.14.5",
+    "react-dom": "^0.14.5",
     "react-tap-event-plugin": "^0.2.1"
   },
   "devDependencies": {
