--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV='production' ./node_modules/.bin/webpack -p",
-    "dev": "./node_modules/.bin/webpack --watch --progress"
+    "dev": "./node_modules/.bin/webpack --watch --progress",
+    "start": "python -m SimpleHTTPServer 8000"
   },
   "repository": {
     "type": "git",
